[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-mixins-async"
version = "3.0.0"
description = "Async-only SQLAlchemy 2.x mixins with statement-based query helpers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Alexander Arellano" }]
dependencies = [
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20.0",
  "greenlet>=3.1",
]
keywords = ["sqlalchemy", "asyncio", "asyncpg", "orm", "mixins", "aiomysql", "aiosqlite"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.30.0"]
aiomysql = ["aiomysql>=0.2.0"]
all = ["asyncpg>=0.30.0", "aiomysql>=0.2.0"]

[dependency-groups]
dev = [
  "aiomysql>=0.2.0",
  "asyncpg>=0.30.0",
  "coverage>=7.6",
  "mypy>=1.14",
  "testcontainers[mysql,postgres]>=4.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sqlalchemy_mixins_async*"]

[tool.setuptools.package-data]
sqlalchemy_mixins_async = ["py.typed"]
